# codex-workflows

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  config.toml.example
.codex/: INSTALL.md  config.toml
crates/: README.md
crates/codex-threads/: Cargo.toml
crates/codex-threads/src/: main.rs
docs/: ROADMAP.md  gstack-lessons.md  workflow-foundation.md
memories_extensions/: README.md
playbooks/: BACKPRESSURE_POLICY.md  RPI_LOOP.md  codex-workflows-operator.md  model-routing.md  personal-swarm-workflow.md  reviewer-prompts.md  swarm-orchestration.md  upstream-surface-triage.md  workflow-authoring.md  workflow-commands.md
prompts/: bug-scanner-autopilot.md  simplify.md  verify-gates.md  workflow-authoring.md  workflow-deep-team.md  workflow-execute.md  workflow-fix-loop.md  workflow-learning-tests.md  workflow-plan.md  workflow-research.md  workflow-resume.md  workflow-rpiv.md  workflow-solo.md  workflow-status.md  workflow-team.md  workflow-verify.md
roles/: architecture_analyst.toml  efficiency_reviewer.toml  history_reviewer.toml  implementer.toml  instruction_compliance_reviewer.toml  integrator.toml  packet_verifier.toml  planner.toml  quality_reviewer.toml  research_locator.toml  researcher.toml  reuse_reviewer.toml  reviewer.toml  rust_correctness_reviewer.toml  spark_implementer.toml  spark_implementer_xhigh.toml  spec_reviewer.toml  user_flow_validator.toml  worker.toml
rules/: default.rules
schemas/: check-matrix.md  task-schema.md
scripts/: check-shareable.sh  sync-shareable-from-home.sh
templates/: DESIGN_DISCUSSION.md  PLAN.md  (+4 more)
(+102 files in other folders)
